--- a/index.html
+++ b/index.html
@@ -1,28 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Password Generator</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-        <script src="index.js"></script>
-    </head>
-    <body>
-        <div class="card">
-            <div class="card-body">
-                <h3 class="card-title">Password Generator</h3>
-                <div class="card-deck">
-                    <h5>Generate a Password</h5>
-
-                </div>
-                <blockquote class="blockquote">
-                    <input readonly class="form-control" type="text" name="password" placeholder="Your Secure Password">
-                </blockquote>
-            </div>
-            <button class="btn btn-primary" type="button" name="generate">Generate Password</button>
+  <head>
+    <title>Password Generator</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="css/style.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous"
+    />
+    <script src="index.js"></script>
+  </head>
+  <body>
+    <div class="card">
+      <div class="card-body">
+        <h3 class="card-title">Password Generator</h3>
+        <div class="card-deck">
+          <h5>Generate a Password</h5>
         </div>
-    
+        <blockquote class="blockquote">
+          <input
+            readonly
+            class="form-control"
+            type="text"
+            id="password"
+            placeholder="Your Secure Password"
+          />
+        </blockquote>
+      </div>
+      <button
+        onclick="generatePassword()"
+        class="btn btn-primary"
+        type="button"
+        name="generate"
+      >
+        Generate Password
+      </button>
 
-    </body>
+      <div class="hidden" id="prompt-length">
+        <div class="form-group">
+          <label for="length">Enter Password Length</label>
+          <input class="form-control" type="number" id="length" />
+          <span id="lengthError"></span>
+        </div>
+      </div>
+      <div class="" id="characters">
+        <div class="form-group">
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" id="lower" />
+            <label for="lower" class="form-check-label">Lowercase</label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" id="upper" />
+            <label for="upper" class="form-check-label">Uppercase</label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" id="numeric" />
+            <label for="lower" class="form-check-label">Numeric</label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" id="special" />
+            <label for="lower" class="form-check-label">Special</label>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
