--- a/index.html
+++ b/index.html
@@ -11,34 +11,34 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
+    <!-- font awesome for clip board icon? -->
     <script src="index.js"></script>
   </head>
   <body>
-    <div class="card">
-      <div class="card-body">
-        <h3 class="card-title">Password Generator</h3>
-        <div class="card-deck">
-          <h5>Generate a Password</h5>
-        </div>
-        <blockquote class="blockquote">
-          <input
+    <div id="main" role="main" class="container-fluid">
+      
+      <!-- main card for the page that contains all the inputs. Bootstrap card -->
+      <div class="card">
+        <div class="card-body">
+          <h3 class="card-title">Password Generator</h3>
+          <div class="card-deck">
+            <!-- <h5>Generate a Password</h5> -->
+          </div>
+          <blockquote class="blockquote">
+            <input
             readonly
             class="form-control"
             type="text"
             id="password"
             placeholder="Your Secure Password"
-          />
-        </blockquote>
-      </div>
-      <button
-        onclick="generatePassword()"
-        class="btn btn-primary"
-        type="button"
-        name="generate"
-      >
-        Generate Password
-      </button>
-
+            />
+          </blockquote>
+        </div>
+        <hr>
+        <div>
+          <h5>Generate a Password</h5>
+        </div>
+      
       <div class="hidden" id="prompt-length">
         <div class="form-group">
           <label for="length">Enter Password Length</label>
@@ -66,6 +66,16 @@
           </div>
         </div>
       </div>
+      <button
+          onclick="generatePassword()"
+          class="btn btn-primary"
+          type="button"
+          name="generate"
+          id="genButton"
+          >
+          Generate Password
+        </button>
     </div>
+  </div>
   </body>
 </html>
