--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
-    <!-- font awesome for clip board icon? -->
     <script src="index.js"></script>
+    <!-- <script src="index copy.js"></script> -->
   </head>
   <body>
     <div id="main" role="main" class="container-fluid">
